feat: added schemes to docs
