# middleware/checkAuth.js
@@ -1,23 +1,23 @@
-import jwt from 'jsonwebtoken';
+import jwt from "jsonwebtoken";
 
 export default (req, res, next) => {
-
-    const token = (req.headers.authorization || '').replace(/Bearer\s?/, '');
-
-    if (token) {
-        try {
-            const decoded = jwt.verify(token, 'secretkey123');
-            req.userId = decoded._id;
-            next();
-        } catch (err) {
-            return res.status(403).json({
-                message: 'No access. Invalid token.'
-            })
-        }
-    } else {
-        return res.status(403).json({
-            message: 'No access. No token.'
-        })
+  const token = (req.headers.authorization || "").replace(/Bearer\s?/, "");
+  /* #swagger.security = [{
+            "bearerAuth": []
+    }] */
+  if (token) {
+    try {
+      const decoded = jwt.verify(token, "secretkey123");
+      req.userId = decoded._id;
+      next();
+    } catch (err) {
+      return res.status(403).json({
+        message: "No access. Invalid token.",
+      });
     }
-
+  } else {
+    return res.status(403).json({
+      message: "No access. No token.",
+    });
+  }
 };
